--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy"
   },
+  "engines": { "node": ">=18.18" },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
