--- a/package.json
+++ b/package.json
@@ -1,71 +1,39 @@
 {
   "name": "cotacao-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.1.3",
   "private": true,
-  "license": "UNLICENSED",
+  "type": "commonjs",
+  "engines": { "node": ">=18.18" },
   "scripts": {
-    "postinstall": "prisma generate",
+    "preinstall": "rm -rf node_modules/.prisma node_modules/@prisma/client", 
+    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
     "build": "nest build",
     "start": "node dist/main.js",
-    "prisma:generate": "prisma generate",
+    "start:migrate": "prisma migrate deploy && node dist/main.js",
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
     "prisma:deploy": "prisma migrate deploy"
   },
-  "engines": { "node": ">=18.18" },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/common": "^10",
+    "@nestjs/core": "^10",
+    "@nestjs/platform-express": "^10",
+    "@nestjs/swagger": "^7.4.2",
+    "swagger-ui-express": "^5.0.0",
+
     "@prisma/client": "^6.17.1",
-    "bcryptjs": "^3.0.2",
+    "prisma": "^6.17.1",
+
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
+    "class-validator": "^0.14.0",
+    "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "rxjs": "^7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^30.0.0",
-    "prettier": "^3.4.2",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
+    "@nestjs/cli": "^10",
+    "typescript": "^5",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "@nestjs/schematics": "^10",
+    "@nestjs/testing": "^10"
   }
 }
