--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "cotacao-backend",
-  "version": "1.1.3",
+  "name": "ac-entregas-api",
+  "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
-  "engines": { "node": ">=18.18" },
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
-    "preinstall": "rm -rf node_modules/.prisma node_modules/@prisma/client", 
-    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
     "build": "nest build",
     "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "start:migrate": "prisma migrate deploy && node dist/main.js",
-    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
-    "prisma:deploy": "prisma migrate deploy"
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "dev": "nest start --watch"
   },
   "dependencies": {
-    "@nestjs/common": "^10",
-    "@nestjs/core": "^10",
-    "@nestjs/platform-express": "^10",
-    "@nestjs/swagger": "^7.4.2",
-    "swagger-ui-express": "^5.0.0",
-
-    "@prisma/client": "^6.17.1",
-    "prisma": "^6.17.1",
-
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "bcryptjs": "^2.4.3",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.19.0",
+    "@types/helmet": "^0.0.48",
+    "cors": "^2.8.5",
+    "helmet": "^7.2.0",
+    "prisma": "^5.19.0",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10",
-    "typescript": "^5",
-    "ts-node": "^10.9.2",
-    "@nestjs/schematics": "^10",
-    "@nestjs/testing": "^10"
-  }
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "typescript": "^5.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client"
+    ]
+  },
+  "overrides": {},
+  "resolutions": {},
+  "postinstall": "prisma generate"
 }
