--- a/package.json
+++ b/package.json
@@ -18,17 +18,24 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "7.4.2",
     "@prisma/client": "^5.19.0",
     "@types/helmet": "^0.0.48",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
     "cors": "^2.8.5",
     "helmet": "^7.2.0",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.4.0"
   },
   "pnpm": {
