--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,8 @@
 # nixpacks.toml
+
 [phases.setup]
-# se precisar de pacotes do SO, pode listar aqui (ex.: openssl)
-# nixPkgs = ["openssl"]
+# instala Node 20 + npm 10 + openssl
+nixPkgs = ["nodejs_20", "npm-10_x", "openssl"]
 
 [phases.install]
 cmds = [
