--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dev": "nest start --watch"
   },
   "dependencies": {
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
