--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "plugins": [{ "name": "@nestjs/swagger/plugin" }]
 }
