--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-validator": "0.14.2",
     "cors": "^2.8.5",
     "helmet": "^7.2.0",
+    "pdfkit": "^0.17.2",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -38,6 +39,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/pdfkit": "^0.17.3",
     "typescript": "^5.4.0"
   },
   "pnpm": {
