--- a/package.json
+++ b/package.json
@@ -17,28 +17,34 @@
   "dependencies": {
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "^5.19.0",
     "@types/helmet": "^0.0.48",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cors": "^2.8.5",
     "helmet": "^7.2.0",
+    "mssql": "^12.0.0",
     "pdfkit": "^0.17.2",
+    "pg": "^8.16.3",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^24.9.1",
     "@types/pdfkit": "^0.17.3",
     "typescript": "^5.4.0"
   },
