--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dev": "nest start --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.922.0",
+    "@aws-sdk/s3-request-presigner": "^3.922.0",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
     "@nestjs/axios": "^4.0.1",
@@ -38,14 +40,17 @@
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
+    "sharp": "^0.34.4",
     "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/pdfkit": "^0.17.3",
+    "@types/sharp": "^0.31.1",
     "typescript": "^5.4.0"
   },
   "pnpm": {
