--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start:migrate": "prisma migrate deploy && node dist/main.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "dev": "nest start --watch"
+    "dev": "nest start --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
@@ -27,6 +31,7 @@
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "^5.19.0",
     "@types/helmet": "^0.0.48",
+    "@types/pg": "^8.15.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -46,11 +51,15 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/pdfkit": "^0.17.3",
     "@types/sharp": "^0.31.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.4.0"
   },
   "pnpm": {
