--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "allowImportingTsExtensions": false
   },
   "plugins": [{ "name": "@nestjs/swagger/plugin" }]
 }
