--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^2.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "helmet": "^7.2.0",
     "mssql": "^12.0.0",
@@ -53,6 +54,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
