--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@alexssmusica/node-pdf-nfe": "^1.2.3",
     "@aws-sdk/client-s3": "^3.922.0",
     "@aws-sdk/s3-request-presigner": "^3.922.0",
     "@fastify/swagger": "^9.5.2",
@@ -40,14 +41,17 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "helmet": "^7.2.0",
+    "jspdf": "^3.0.3",
     "mssql": "^12.0.0",
+    "node-sped-pdf": "^1.0.65",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
     "sharp": "^0.34.4",
-    "swagger-ui-express": "5.0.1"
+    "swagger-ui-express": "5.0.1",
+    "xmlbuilder2": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,6 +60,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/jest": "^30.0.0",
+    "@types/jspdf": "^1.3.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/pdfkit": "^0.17.3",
